@@ -113,9 +113,9 @@
 
     <tr BGCOLOR="#CCCCFF">
      <td VALIGN=TOP><b><font size=+1>Features</font></b></td>
-     <td>Can export to LaTeX formats, somes documents with text only. Formulas are analysed,
-	picture are not translated (the name is not write in the latex markup with new extension),
-	<b>simple</b> table are supported now but part is still not supported yet.<br>
+     <td>Can export to LaTeX formats, somes documents with text only and formulas.
+	Picture are not translated (the name is not write in the latex markup with new extension),
+	<b>simple</b> tables are supported now but part is still not supported yet.<br>
 	Kword is used only as a word processing not WYSIWYG.
 	</td>
     </tr>
@@ -173,6 +173,7 @@
 			<ul>
 				<li>news parameters dialog box</li>
 				<li>anchor support</li>
+				<li>formula support</li>
 			</ul>
 		</li>
 	</ul>
