@@ -7,7 +7,8 @@ july 2001
 - features
 	o news parameters dialog box
 	o anchor support
-
+	o formula support
+	
 ---------------------------------------
 07 july 2001
 - bug fixes
